# clear-haskell

./: Equivalence.hs  clear.cabal
