cabal-version: 2.2

name: clear
version: 0

build-type: Simple

test-suite equivalence
  build-depends:
    base, ghc-lib-parser, ghc-lib-parser-ex, pretty-simple, rio, syb
  default-extensions: EmptyCase LambdaCase NoImplicitPrelude StandaloneDeriving
  default-language: Haskell2010
  main-is: Equivalence.hs
  type: exitcode-stdio-1.0
